--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     width: 1510px;
     height: 717px;
     background-color: #FFDF92;
+    flex-direction: row;
+}
+@media (max-width:600) {
+    .home{
+        flex-direction: column;
+    }
+    
 }
 #brand{
     width: 42px;
@@ -95,9 +102,9 @@ button{
     font-weight: 600;
     padding-top: 50px;
 }
-.container4{
+/* .container4{
     margin-top: -50px;
-}
+} */
 .container5{
     width: 1510px;
     height: 565px;
@@ -161,4 +168,134 @@ button{
     background-image: url(trade.png);
     background-size: cover;
     margin-top: 70px;
+}
+.container6{
+    width: 1510px;
+    height: 717px;
+    background-color: #FFE9B4;
+}
+#testimonals{
+    height: 200px;
+    width: 1510px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#testimonals p{
+    font-size: 60px;
+    font-family: serif;
+    color: #422F01;
+    font-weight: 600;
+    
+}
+#profiles{
+    height:500px;
+    width: 320px;
+    /* border: 2px solid black; */
+}
+.container7{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.image{
+    height: 205px;
+    width: 205px;
+    background-image: url(prof1.png);
+    background-size: cover;
+}
+.group{
+    padding: 30px 50px 0px 50px;
+}
+.user{
+    height: 70px;
+    width: 280px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    color: #422F01;
+    font-weight: 550;
+    margin-top: 40px;
+    margin-left: 20px;
+    /* border: 2px solid red; */
+}
+.userdet{
+    height: 120px;
+    width: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* border: 2px solid red; */
+    padding-left: 8px;
+    font-size: 20px;
+    margin-top: -20px;
+    color: #422F01;
+}
+.container8{
+    width: 1510px;
+    height: 717px;
+    background-color: #FFDF92;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#container9{
+    display: flex;
+    gap: 200px;
+}
+#up{
+    width: 211px;
+    height: 298px;
+    background-image: url(up.png);
+    background-size: cover;
+    margin-top: 40px;
+
+}
+#us{
+    width: 544px;
+    height: 211px;
+    font-family: serif;
+    font-size: 60px;
+    font-weight: 550;
+    color: #422F01;
+    margin-top: 35px;
+}
+.container10{
+    width: 1510px;
+    height: 717px;
+    background-color: #FFE9B4;
+}
+.city{
+    width: 1510px;
+    height: 358.5px;
+    background-image: url(city1.png);
+}
+#contacts{
+    font-size: 60px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 550;
+    color: #422F01;
+    margin-top: 50px;
+    margin-left: 50px;
+}
+.info{
+    width: 1520px;
+    height: 175px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: -60px;
+}
+.details{
+    height: 120px;
+    width: 400px;
+    margin-left: -110px;
+}
+.mail{
+    font-size: 30px;
+    font-family: serif;
+    font-weight: 500;
+    color: #422F01;
+    font-weight: 550;
+}
+.adress{
+    margin-top: -20px;
+    font-size: 18px;
 }
